--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
   api:
     container_name: 'my-aspnetcore-app-dev'
     image: 'my-aspnetcore-app-dev'
-    mem_limit: 366m
     build:
       context: .
       dockerfile: Dockerfile.build
@@ -13,7 +12,7 @@ services:
      - .:/app
     entrypoint: ["sh", "./build-run-local.sh"] 
     environment: 
-      - ASPNETCORE_URLS=https://*:80
+      - ASPNETCORE_URLS=http://*:80
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
      - "80:80"
@@ -25,7 +24,6 @@ services:
   postgres:
     container_name: 'postgres-my-aspnetcore-app-dev'
     image: postgres:9.6.3
-    mem_limit: 366m
     volumes:
       - 'postgres:/var/lib/postgresql/data'
     environment:
@@ -36,7 +34,7 @@ services:
       - my-aspnetcore-network
 
 networks:
-  deficiencies-network:
+  my-aspnetcore-network:
     driver: bridge
 
 volumes:
